--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">RocketWash Web</string>
-    <string name="url">https://beta.rocketwash.me</string>
+    <!--<string name="url">https://beta.rocketwash.me</string>-->
+    <string name="url">https://webcamtests.com/</string>
+    <string name="dialog_permission_title">Permissions required</string>
+    <string name="dialog_permission_message">Confirm the following permissions: %s</string>
+    <string name="dialog_permission_action_cancel">Deny</string>
+    <string name="dialog_permission_action_accept">Accept</string>
 </resources>
